# unifi-dev-kit

./: .env.template  Cargo.toml  LICENSE  README.md  rustfmt.toml
api/: README.md  contacts.http  profile.http  wallet.http
api-http/: README.md  health.http  payment.http  wallet.http
examples/: Cargo.toml
examples/examples/pay/: faucet_request.rs  fetch_bal_fee.rs  pay.rs  pay_history.rs  pay_receipt.rs
examples/examples/wallet/: address.rs  addresses.rs  balances.rs
examples/src/: lib.rs
primitives/: Cargo.toml
primitives/abi/: BundlePayV2.json
primitives/src/: errors.rs  evm.rs  lib.rs  permit2.rs  types.rs  utils.rs
sdk/: Cargo.toml
sdk/src/: errors.rs  health.rs  lib.rs  pay.rs  profile.rs  types.rs  wallet.rs
