[package]
name = "unifi-sdk-primitives"
description = "Official Rust SDK primitives for UniFi"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.4.1", optional = true }
bson = { version = "2.14.0", default-features = false}
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[features]
utils = ["dep:alloy-primitives"]