[package]
name = "unifi-sdk-rs"
description = "Official Rust SDK for UniFi"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
futures = "0.3.31"
reqwest = {version = "0.12.15", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version =  "1.46.1", features = ["time", "macros"]}
unifi-sdk-primitives = {path = "../primitives"}